@@ -1,5 +1,9 @@
 
 5.2b1 -> 5.3a1
+    - jbj: rpmdav: compute st_nlink correctly for plain HTTP dirs.
+    - jbj: rpmavx: fix: alloc an extra byte for pesky trailing '/'.
+    - jbj: rpmdav: fix: refill/restart if forward parse runs out of data.
+    - jbj: rpmhtml: fix: ... and don't forget to reinitialize all fields.
     - jbj: yarn: convert rpmhtml to usage mutex with refcounts.
     - rse: fix building under RPM_VENDOR_OPENPKG/switch-from-susr-to-musr-on-srpm-install
     - jbj: rpmio: fix: compute url length in rpmGenPath() w/o using pointers.
